| Bug #4665 | Views: NULL value in base table causes SELECT from view to fail | ||
|---|---|---|---|
| Submitted: | 21 Jul 2004 2:28 | Modified: | 25 Aug 2004 9:02 |
| Reporter: | Trudy Pelzer | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.1-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[21 Jul 2004 2:28]
Trudy Pelzer
[23 Jul 2004 3:55]
MySQL Verification Team
Verified against latest bk source.
[24 Aug 2004 19:33]
Oleksandr Byelkin
ChangeSet 1.1731 04/08/24 20:29:44 bell@sanja.is.com.ua +3 -0 fixed aggregate function processing in VIEWs (BUG#4665)
[25 Aug 2004 9:02]
Oleksandr Byelkin
Thank you for bugreport! Bugfix is pushed into source repository.
