fixed aggregate function processing in VIEWs (BUG#4665)

mysql-test/r/view.result:
  Aggregate functions in view list
mysql-test/t/view.test:
  Aggregate functions in view list
sql/table.cc:
  fixed aggregate function processing in VIEWs